--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^4.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
